style.css
/* ... */
.projectCardDublicate{
    border-radius:0 0 25px 25px;
    margin: 0 0 100px 0;
    z-index: 20;
}

.cardProject{
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    width: 80%;
    height: 60vh;
}

.projectCardDublicate .cardProject{
    animation: moveSide linear forwards;
    animation-timeline: view(0%);
    animation-range: entry 0 cover 50%;
}


.cardProject img{
    border: var(--primary) 2px solid;
    width: auto;
    height: 400px;
    border-radius: 20px;
    display: flex;
}

.links{
    display: flex;
    justify-content: center;
    align-items: center;
}

.links a{
    margin: 20px;

}

.cardProject .details{
    margin: 15px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.details h2{
    font-size: 32px;
    color: var(--primary);
    margin: 5px;
}

.details p{
    font-size: 20px;
    font-weight: bold;
    margin: 5px;
    color: var(--text);
}

@keyframes wave {
    0%, 100% {
        border-radius: 70% 30% 72% 28% / 27% 61% 39% 73%;
    }
    50% {
        border-radius: 77% 23% 54% 46% / 40% 38% 62% 60%;
    }
}

@keyframes rotate1 {
    0%, 100% {
        rotate: 15deg;
    }
    50% {
        rotate: -15deg;
    }
}

@keyframes rotate2 {
    0%, 100% {
        rotate: -15deg;
    }
    50% {
        rotate: 15deg;
    }
}

@keyframes appear{
    0%{
        opacity: 0;
        scale: 0.5;
    }
    100%{
        opacity: 1;
        scale: 1;
    }
}

@keyframes side{
    0%{
        transform: translate(150% ,-150%);
    }
    100%{
        transform: translate(0, 0);
    }
}

@keyframes box{
    0%{
        transform: translateY(-20px);
        opacity: 1;
    }
    70%{
        opacity: .7;
    }
    100%{
        transform: translateY(-80vh) rotate(360deg);
        opacity: 0;
    }
}

@keyframes scrollRevel{
    to{
        background-size: 100% 100%;
        color: #00000000;
    }
}

@keyframes moveUp {
    to{
      transform: perspective(1200px) translateY(0px) rotateX(-90deg) translateZ(0px);
      box-shadow: 0.2s;
      transition: 3s;
      box-shadow: var(--primary) 0px 0px 300px 200px;
    }
} 

@keyframes moveDown {
    from{
        box-shadow: var(--primary) 0px 0px 300px 200px;
    }
    to{
      transform: perspective(1200px) translateY(0px) rotateX(0deg) translateZ(0px);
      transition: 3s;
      box-shadow:0px;
      box-shadow: transparent;
    }
} 

@keyframes moveSide {
    from{
        transform: perspective(800px) translateX(-1000px) translateY(0px) translateZ(0px);
    }
    
    to{
        transform: perspective(800px) translateX(0px) translateY(0px) translateZ(0px);
    }
}

@keyframes blur{
    0%{
        opacity: 0.5;
        transform: translate3d(0, 100px, 0);
    }
    100%{
        opacity: 1;
        transform: translate3d(0, 0, 0);
    }
}

@keyframes entry{
    0%{
        transform:translateX(500px);
    }
    100%{
        transform:translateX(0px);
    }
}

@media (max-width:1570px) {
    #home{
        margin-top:20px ;
        align-content: start;
        height: 120vh;
    }
}

@media (max-width:1520px){
    
    #photo{
        margin-top: 125px;
    }
    .flip-container{
        width: 300px;
        height:450px;
    }
}

@media (max-width:1450px) {
    #name{
       font-size: 38px;
    }
    #hello{
       font-size: 20px;
    }
    #designation{
       font-size: 20px;
    }
    #home{
        height: 100vh;
    }
    .cardProject{
        flex-wrap: wrap;
        margin: 50px;
    }
} 

@media (max-width:1360px) {
    #name{
        font-size: 35px;
    }
    #hello{
       font-size: 18px;
    }
    #designation{
       font-size: 18px;
    }
    #home{
        height: 145vh;
    }
    .cardProject{
        flex-wrap: wrap;
    }
}

@media (max-width:1200px) {
    #nav{
        width: 100%;
        margin: 0;
    }
    #nav ul{
        width: 100%;
        justify-content: space-around;
        margin: 18px;
        padding: 0;
    }
    #content{
        display: flex;
        text-align: center;
        align-items: center;
    }
    #photo{
        justify-content: center;
    }
    .shape{
        top: -200px;
        left: -200px;
        width: 500px;
        height: 500px;
        scroll-snap-align: start;
    }
    #home{
        height: 140vh;
    }
    #low{
        display: none;
    }
    #certi{
        flex-direction: column;
    }
    .title{
        color: #000;
        width: 90%;
    }
    .flip-container{
        margin: 10px;
        width: 300px;
    }
    .card{
        width: 80%;
    }
    .img img{
        width: 300px;
        height: auto;
    }
    #education{
        flex-direction: column;
    }
    .educationCard{
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    .edu{
        width: 90vw;
    }
    .card h2{
        font-size: 27px;
    }
    .card p{
        font-size: 15px;
    }
    .card h3{
        font-size: 20px;
    }
    .cardProject .img img{
        width: 80%;
        height: auto;
    }
    .cardProject .img{
        display: flex;
        justify-content: center;
    }
}

@media (max-width:1000px) {
    .cardProject .img img{
        width: 80%;
    }
    .cardProject .img{
        display: flex;
        justify-content: center;
    }
}
/* ... */

